# MineAPI

./: API.hpp  APIHandler.hpp  CMakeLists.txt  EnumHandler.hpp  Handler.hpp  README.md  file.txt  main.cpp
FILEAPI/: CMakeLists.txt  FileAPI.hpp  FileEnumHandler.hpp  FileHandler.hpp
FILEAPI/PosixFileAPI/: PosixFileAPI.hpp
FILEAPI/WindowFileAPI/: WindowFileHandler.hpp  file.txt
