cmake_minimum_required(VERSION 3.26)
project(MineAPI)
set(OSBit 32)
if(CMKAE_SIZEOF_VOID_P EQUAL 8)
    set(OSBit 64)
endif()
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BuildDirectory "${CMAKE_SOURCE_DIR}/bin/${CMAKE_SYSTEM_NAME}${OSBit}/${CMKAE_BUILD_TYPE}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${BuildDirectory}/static libs")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${BuildDirectory}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${BuildDirectory}")
include_directories("FILEAPI")
include_directories("FILEAPI/WindowFileAPI")
include_directories(".")
add_subdirectory("FILEAPI")
add_executable(MineAPI main.cpp)
